--- a/WindowsFormsApp1/WindowsFormsApp1/GIBDD.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1/GIBDD.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="REG_MARK_LIB">
+      <HintPath>..\..\REG_MARK_LIB\REG_MARK_LIB\bin\Debug\REG_MARK_LIB.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,6 +47,9 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="VIN_LIB">
+      <HintPath>..\..\VIN_LIB\VIN_LIB\bin\Debug\VIN_LIB.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Form1.cs">
